[gd_scene load_steps=12 format=2]

[ext_resource path="res://Component/card_control.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/HUD/ham.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/heart.png" type="Texture" id=4]
[ext_resource path="res://Script/roaming_control.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/desc.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/location.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/fight_bg.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD/birthstone_beryl_01.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 2 )

[node name="roaming_control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="texture_loc" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_top = 66.0
margin_bottom = 97.0
texture = ExtResource( 7 )

[node name="location" type="RichTextLabel" parent="texture_loc"]
anchor_right = 1.0
margin_left = 18.0
margin_top = 1.0
margin_right = -18.0
margin_bottom = 28.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Lorem Ipsum is simply dummy[/center]"
text = "Lorem Ipsum is simply dummy"
fit_content_height = true

[node name="texture_desc" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 126.0
margin_right = -7.0
margin_bottom = 241.0
texture = ExtResource( 6 )

[node name="description" type="RichTextLabel" parent="texture_desc"]
anchor_right = 1.0
margin_left = 7.0
margin_top = 9.0
margin_right = -7.0
margin_bottom = 105.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.[center]"
text = "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
fit_content_height = true

[node name="card_control" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.0
margin_top = -130.0
margin_right = 169.0
margin_bottom = 208.0

[node name="stat_bg" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -183.0
margin_top = -164.0
margin_bottom = -105.0
texture = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="stat_bg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -15.5
margin_right = 72.5
margin_bottom = 16.5
alignment = 1

[node name="life" type="TextureRect" parent="stat_bg/HBoxContainer"]
margin_left = 1.0
margin_right = 33.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="life_point" type="Label" parent="stat_bg/HBoxContainer/life"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
text = "99"
align = 1
valign = 2

[node name="VSeparator" type="VSeparator" parent="stat_bg/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 37.0
margin_right = 52.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 15 )

[node name="food" type="TextureRect" parent="stat_bg/HBoxContainer"]
margin_left = 56.0
margin_right = 88.0
margin_bottom = 32.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="food_point" type="Label" parent="stat_bg/HBoxContainer/food"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
text = "10"
align = 1
valign = 2

[node name="VSeparator2" type="VSeparator" parent="stat_bg/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 92.0
margin_right = 107.0
margin_bottom = 32.0
rect_min_size = Vector2( 15, 15 )

[node name="money" type="TextureRect" parent="stat_bg/HBoxContainer"]
margin_left = 111.0
margin_right = 143.0
margin_bottom = 32.0
texture = ExtResource( 11 )

[node name="money_point" type="Label" parent="stat_bg/HBoxContainer/money"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -14.0
text = "99"

[connection signal="choice_made" from="card_control" to="." method="_on_card_control_choice_made"]
